# tyr-rust

./: .env  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  config  docker-compose.yml
.cargo/: config.toml
docker/bot/: Dockerfile
docker/db/: Dockerfile
infra/: tyr.service
migration/: Cargo.toml
migration/src/: lib.rs  m20240317_204202_create_guilds_table.rs  m20240317_204215_create_guild_config_options_table.rs  m20240317_204225_create_users_table.rs  m20240317_204230_create_user_infractions_table.rs  m20240317_204255_create_user_thanks_table.rs
migrations/: 2024_03_04_06_00_00_initial_setup.sql
src/: commands.rs  commands_old.rs  main.rs
src/commands/: dev.rs  messages.rs  mod.rs  user.rs
src/database/: m20240317_204202_create_guilds_table.rs  m20240317_204215_create_guild_config_options_table.rs  m20240317_204225_create_users_table.rs  m20240317_204230_create_user_infractions_table.rs  m20240317_204255_create_user_thanks_table.rs  mod.rs
src/event_handlers/: handlers.rs
src/logging/: event_handler.rs  message_delete.rs  message_edit.rs  mod.rs  reaction.rs
src/utils/: base.rs  handlers.rs  helpers.rs  mod.rs
