[package]
name = "tyr"
version = "0.1.0"
authors = ["Stem Guild <code@stemguild.org>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.2"
poise = "0.6.1"
serenity = { default-features = true, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
